--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.2"
   }
 }
